--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -34,7 +34,7 @@
         <a href="/atom.xml" title="RSS"><i class="fa fa-rss-square"></i></a>
 
         <small><small>
-                <p>&copy; 2021 Daniel Coelho. All rights reserved.</p>
+                <p>&copy; 2022 Max Florentin. Made with <3.</p>
             </small></small>
     </div>
 </div>
