fix image in sidebar

--- a/_includes/templates/sidebar.liquid
+++ b/_includes/templates/sidebar.liquid
@@ -2,11 +2,7 @@
     <div class="sidebar height-full overflow-y-scroll overflow-x-hidden">
         <div class="header d-flex flex-column p-3 text-center">
             <div class="title pb-1">
-                #home {
-                left: 0px;
-                width: 46px;
-                background: url(https://github.githubassets.com/images/icons/emoji/octocat.png)
-                }
+                <img src="https://github.githubassets.com/images/icons/emoji/octocat.png" alt="Paris" class="center">
                 <a class="h4 no-underline py-1 px-2 rounded-1" href="{{ site.baseurl }}/" title="{{ site.description }}">
                     <i class="fa fa-home"></i> {{ site.title }}
                 </a>
