--- a/_includes/templates/sidebar.liquid
+++ b/_includes/templates/sidebar.liquid
@@ -2,7 +2,7 @@
     <div class="sidebar height-full overflow-y-scroll overflow-x-hidden">
         <div class="header d-flex flex-column p-3 text-center">
             <div class="title pb-1">
-                <img src="https://github.githubassets.com/images/icons/emoji/octocat.png" alt="Paris" class="center">
+                <img src="https://github.githubassets.com/images/icons/emoji/octocat.png" alt="Avatar" class="avatar">
                 <a class="h4 no-underline py-1 px-2 rounded-1" href="{{ site.baseurl }}/" title="{{ site.description }}">
                     <i class="fa fa-home"></i> {{ site.title }}
                 </a>
