--- a/_includes/templates/sidebar.liquid
+++ b/_includes/templates/sidebar.liquid
@@ -1,7 +1,7 @@
 <div class="sidebar-wrap overflow-hidden">
     <div class="sidebar height-full overflow-y-scroll overflow-x-hidden">
         <div class="header d-flex flex-column p-3 text-center">
-            <img align="right" src="https://github.githubassets.com/images/icons/emoji/octocat.png" alt="Avatar" style="width: 64px"/>
+            <img align="center" src="https://github.githubassets.com/images/icons/emoji/octocat.png" alt="Avatar" style="width: 64px"/>
             <div class="title pb-1">
                 <a class="h4 no-underline py-1 px-2 rounded-1" href="{{ site.baseurl }}/" title="{{ site.description }}">
                     <i class="fa fa-home"></i> {{ site.title }}
